updated docker file and docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventory
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/inventory
 spring.datasource.username=sajid
 spring.datasource.password=sajid123
 
