--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,26 @@
-  services:
-    postgres-db:
-      image: postgres:15
-      container_name: postgres-db
-      environment:
-        POSTGRES_USER: sajid
-        POSTGRES_PASSWORD: sajid123
-        POSTGRES_DB: inventory
-      ports:
-        - "5432:5432"
-      volumes:
-        - ./postgres-data:/var/lib/postgresql/data
+version: "3.9"
 
-#    springboot-app:
-#      build: .
-#      container_name: springboot-app
-#      depends_on:
-#        - postgres-db
-#      environment:
-#        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/inventorydb
-#        SPRING_DATASOURCE_USERNAME: sajid
-#        SPRING_DATASOURCE_PASSWORD: password123
-#        SPRING_JPA_HIBERNATE_DDL_AUTO: update
-#      ports:
-#        - "8080:8080"
-#      networks:
-#        - app-network
-#
-#  volumes:
-#    postgres-data:
-#
-#  networks:
-#    app-network:
+services:
+  postgres-db:
+    image: postgres:15
+    container_name: postgres-db
+    environment:
+      POSTGRES_USER: sajid
+      POSTGRES_PASSWORD: sajid123
+      POSTGRES_DB: inventory
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+
+  shopping-backend:
+    build: .
+    container_name: shopping-backend
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres-db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/inventory
+      SPRING_DATASOURCE_USERNAME: sajid
+      SPRING_DATASOURCE_PASSWORD: sajid123
